# 3erCuatrimestre

./: README.md
Análisis Matemático I/Parciales/: 1º Parcial. 22 de abril. Tema 2 - copia.docx  1º parcial. 22 de abril. Tema 1 - copia.docx  2º parcial. 19 de junio. Tema 1..docx  2º parcial. 19 de junio. Tema 2.docx
Inglés II/Finales/: Final regular.docx
Inglés II/Parciales/: 1º parcial.docx  2022-Segundo_Parcial_SIS_II_Consignas.docx  SISTEMAS_LIBRE__ING2.docx
Inglés II/Practica y Teoria/: COHESION_apunte_nuevo.docx  Conceptos_claves.ppt  DETECTAR LAS FRASES NOMILALES.docx  FRASE_NOMINAL_SUSTANTIVO.docx  Frase_Nominal_1.m4a  Frase_Nominal_2.m4a  Frase_Nominal_3.m4a  Frase_Nominal_4.m4a  Frase_Nominal_5.m4a  ING_1_2do_cuat_2020.docx  ING_1_El_Verbo.docx  ING_1_El_Verbo_intervenido.docx  ING_1_Sustantivo_repaso.docx  ING_2_Genero_abstract_repaso.docx  ING_2_Pronombre_repaso.docx  ING_2_Reflexiones_Para_la_Primera_Clase_1.docx  ING_2_Rep3.docx  ING_2_Traductor_de_Google_3.docx  ING_2_What_is_Research_in_Computing_Science_Text (1).docx  Los_Pronombres.pptx  Morfologia_parte_1-1.m4a  Morfologia_parte_1-2.m4a  Morfologia_parte_1-3.m4a  Morfologia_parte_1-4.m4a  Morfologia_parte_2-1.m4a  Morfologia_parte_2-2.m4a  Morfologia_parte_2-3.m4a  SUFIJO_ing_apunte_nuevo.docx  Tecnico_Acerca_de_los_generos_discursivos.pptx  Tecnico_Cohesion.pptx  Tecnico_El_abstract_1.pptx  Tecnico_El_sufijo_ing_en_Ingles.pptx  Verbos_1.m4a  Verbos_2.m4a  Verbos_3.m4a  Verbos_4.m4a  Verbos_5.m4a  Verbos_6.m4a
Programación II/Pascal/: PROGRAMACIONII_PRIMER_PARCIAL_ABRIL2017_TEMA1.docx  PROGRAMACIONII_PRIMER_PARCIAL_ABRIL2017_TEMA1.txt
Programación II/Pascal/2do parcial 2010/: Prog2_Parcial2_2010_Resolucion.doc
Programación II/Practica y Teoria/tads/: CMakeLists.txt  tipo_elemento.c  tipo_elemento.h
Programación II/Practica y Teoria/tads/arboles/: arbol-avl.c  arbol-avl.h  arbol-binario-busqueda.c  arbol-binario-busqueda.h  arbol-binario.c  arbol-binario.h  nodo.c  nodo.h  util_arboles.c  util_arboles.h
Programación II/Practica y Teoria/tads/colas/: colas.h  colas_arreglos.c  colas_arreglos_circular.c  colas_punteros.c  util_colas.c  util_colas.h
Programación II/Practica y Teoria/tads/listas/: listas.h  listas_arreglos.c  listas_cursores.c  listas_punteros.c
Programación II/Practica y Teoria/tads/pilas/: pilas.h  pilas_arreglos.c  pilas_punteros.c  util_pilas.c  util_pilas.h
Programación II/Practica y Teoria/tads/tablas-hash/: tablas-hash-lista-colisiones.c  tablas-hash-zona-overflow.c  tablas-hash.h
Programación II/Practica y Teoria/utilidades/: CMakeLists.txt  aserciones.c  aserciones.h  cadenas.c  cadenas.h  util_listas.c  util_listas.h
Sistemas de Información I/Parciales/: Resolucioìn Segundo Parcial CH.pptx
Sistemas de Información I/Practica y Teoria/Cursada 2023/Unidad 1 y 2/Clase 1/: Leer.txt
Sistemas de Información I/Practica y Teoria/Cursada 2023/Unidad 1 y 2/Clase 10/: Leer.txt
(+18 files in other folders)
